--- a/yote_root/html/yote/rolo.html
+++ b/yote_root/html/yote/rolo.html
@@ -152,7 +152,7 @@ v    }
        <?? return ctx.scratch.search ? 'searching for <b>' + ctx.scratch.search + '</b><br>' : '' ??>
        <table>
          <tr> <th> Name </th>  <th> Email </th>  <th> Phone </th> <th> Delete </th> </tr>
-         <$$ listpaginate EntryRow entries@@ 4 $$> 
+         <$$ ListPaginate EntryRow entries@@ 4 $$> 
        </table>
       </div>
       <$$ Paginator entries@@ $$>
