--- a/yote_root/html/yote/template_tests.html
+++ b/yote_root/html/yote/template_tests.html
@@ -126,7 +126,7 @@ $().ready(function(){
             
 	        is( $.yote.templates.fill_template( 'ArrayTest' ).trim().replace( /[\n\s]+/g, ' '), 'ARRAY 0 : A 1 : C 2 : B Apple : butter Daikon : radish Lemon : yellow YARRA', 'tests <??? function(ctx) { that puts a list in context } ???>, <$$ listfill template @list maxrows $$>, <$ _index_ $> <$ _hashkey_ $> and <$ _ $> ' );
             
-	        is( $.yote.templates.fill_template( 'ArrayTest', undefined, [ '1' ] ).trim().replace( /[\n\s]+/g, ' '), 'ARRAY 4 : E Pea : green Spinach : wild YARRA',  'tests list and hash paginate advacnes' );
+	        is( $.yote.templates.fill_template( 'ArrayTest', undefined, [ '1' ] ).trim().replace( /[\n\s]+/g, ' '), 'ARRAY 4 : E Pea : green Spinach : wild YARRA',  'tests list and hash paginate advances' );
 
 	        is( $.yote.templates.fill_template( 'SandBox' ).trim().replace( /[\n\s]+/g, ' '), 'sandy sandy sandy', '<$ app.sandbox.name $>' );
 	        is( $.yote.templates.fill_template( 'Vars' ).trim().replace( /[\n\s]+/g, ' '), 'My name is unknown', 'default value for get' );
@@ -165,9 +165,9 @@ $().ready(function(){
            ctx.vars.app = $.yote.fetch_default_app();
            ctx.vars.sandbox = $.yote.fetch_default_app().get_sandbox();
        } ???>
-       <$ app.sandbox.name $>
-       <$ _app_.sandbox.name $>
-       <$ sandbox.name $>
+       <$ app|sandbox|name $>
+       <$ _app_|sandbox|name $>
+       <$ sandbox|name $>
     </script>
 
     <script type="text/template" class="yote_template_definition" template_name="ArrayRow">
@@ -182,29 +182,19 @@ $().ready(function(){
        <???
                ctx.vars.array = [ "A", "C", "B", "D", "E" ];
                ctx.vars.hash = {  Apple : 'butter', Spinach : 'wild', Daikon : 'radish', Lemon : 'yellow', Pea : 'green'};
-               ctx.vars.array_pag = $.yote.templates.wrap_list( {
-                   array : ctx.vars.array, 
-                   size  : 3,
-                   initial_start : 0,
-                   ctx : ctx,
-               } );
-               ctx.vars.hash_pag = $.yote.templates.wrap_hash( {
-                   hash  : ctx.vars.hash, 
-                   size  : 3,
-                   initial_start : 0,
-                   ctx : ctx,
-               } );
-            if( ctx.args && ctx.args.length == 1 ) {
-                ctx.vars.array_pag._start = 4;
-                ctx.vars.hash_pag._start  = 3;
-            }
+               ctx.vars.array_pag = ctx.parse( "array@@" );
+               ctx.vars.hash_pag = ctx.parse( "hash%%" );
+               if( ctx.args && ctx.args.length == 1 ) {
+                   ctx.vars.array_pag._start = 4;
+                   ctx.vars.hash_pag._start  = 3;
+               }
            ???>
        ARRAY
        <# putting the size in the array_pag because
           the array_pag might be needed for paginations
           control html #>
-       <$$ listpaginate ArrayRow @@array 3 $$>
-       <$$ hashpaginate HashRow @@hash 3 $$>
+       <$$ listpaginate ArrayRow array@@ 3 $$>
+       <$$ hashpaginate HashRow hash%% 3 $$>
        YARRA
        <??
        ??>
@@ -241,13 +231,12 @@ $().ready(function(){
     </script>
 
     <script type="text/template" class="yote_template_definition" template_name="Ed">
-       Edit field <$$ edit _app_.sandbox 'wistle' $$> UM
+       Edit field <$$ edit _app_|sandbox 'wistle' $$> UM
     </script>
 
 </templates>
 
 <body>
-asdfasasdf  fd
   <h1>Yote Template Tests</h1>
   <div  id="comments" class="yote_template hide" template="Comments"></div>
   <div  id="after_render" class="yote_template hide" template="AfterRender"></div>
