added fixed record yote db store

--- a/yote_root/html/index.html
+++ b/yote_root/html/index.html
@@ -1,2 +1,42 @@
+<html>
+  <head>
+    <title>Yote</title>
+    <style>
+    span { 
+      header { background-color: lightgreen; 
+               vertical-align: top;
+               margin: auto;
+             }
+      .main { background-color: lightblue; 
+            }
+      footer { background-color: red; 
+             }
+    </style>
+  </head>
+  <body>
+    <header>
+      <img src="yotelogo.png"> 
+        Yote Platform and Templating System 
+        <span> Log In </span>
+    </header>
 
-TEST
+    <div class="main">
+      Main Stuff<br>
+      asfd<br>
+asdfa<br>p
+sfd<br>
+asfd<br>
+sa<br>
+fdsa<br>
+fdsa<br>
+ffdsP
+<br>
+<br>
+<br>
+<br>
+<br>
+    </div>
+
+    <footer>Foot</footer>
+  </body>
+</html>
