--- a/yote_root/html/index.html
+++ b/yote_root/html/index.html
@@ -1,18 +1,29 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Yote</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <script src="/yote/JS"></script>
+    <script>
+    $().ready(function() {
+        $.yote.debug = true;
+        $.yote.templates.import_templates( '/templates/default_templates.html' );
+        $.yote.templates.import_templates( '/templates/yote_templates.html' );
+//        var yote_app = $.yote.init( 'MadYote' );
+        $.yote.templates.init();
+        $.yote.templates.refresh();
+    } );
+    </script>
+
     <style>
-    span { 
-      header { background-color: lightgreen; 
-               vertical-align: top;
-               margin: auto;
-             }
-      .main { background-color: lightblue; 
-            }
-      footer { background-color: red; 
-             }
     </style>
+
+    <script type="text/template" class="yote_template_definition" template_name="Main">
+      <b>Main</b>
+   </script>
   </head>
+
   <body>
     <header>
       <img src="yotelogo.png"> 
@@ -21,8 +32,10 @@
     </header>
 
     <div class="main">
-      Main Stuff<br>
-<br>
+      <$$ Main $$>
+    </div>
+
+<h1>HA</h1>
 
     <footer>Foot</footer>
   </body>
