fixing and modernizing templates and try.html

--- a/yote_root/html/yote/template_tests.html
+++ b/yote_root/html/yote/template_tests.html
@@ -262,13 +262,13 @@ $().ready(function(){
 
 <body>
   <h1>Yote Template Tests</h1>
-  <div  id="comments" class="yote_template hide" template="Comments"></div>
-  <div  id="after_render" class="yote_template hide" template="AfterRender"></div>
+  <div  id="comments" class="hide"><$$ Comments $$></div>
+  <div  id="after_render" class="hide"><$$ AfterRender $$></div>
 
   <div  id="eddy" class="yote_template" template="Ed"></div>
   <div id="tests"></div>
   <div id="results"></div>
 
-  <div  id="after_render" class="yote_template" template="SelTest"></div>
+  <div  id="after_render"><$$ SelTest $$></div>
 </body>
 </html>
