changing the object style of javascript to use closures more

--- a/yote_root/html/yote/unit_tests.html
+++ b/yote_root/html/yote/unit_tests.html
@@ -13,7 +13,7 @@
 <script src="/yote/js/jquery.base64.min.js"></script>
 <script src="/yote/js/jquery.cookie.js"></script>
 <script src="/yote/js/json2.js"></script>
-<script src="/yote/js/yote.js"></script>
+<script src="/yote/js/yote2.js"></script>
 <script src="/yote/js/yote.util.js"></script>
 
 <script>
