updated license, readyme and changelog, and added warnings to DB::DataStore

--- a/YoteServer/html/test.html
+++ b/YoteServer/html/test.html
@@ -10,14 +10,17 @@
   <button id="login" type="button">Log In</button>
 
     <script>
-    yote.init();
+    yote.initMain();
 
     function onLogin( res ) {
         alert( "LoggedIn " + res );
     }
     
     document.getElementById( 'login' ).addEventListener('click',function(){
-        yote.call( 'login.js', [ document.getElementById( 'name' ).value, document.getElementById( 'pw' ).value ], onLogin );
+        yote.call( 'login.js', 
+                   [ document.getElementById( 'name' ).value, 
+                     document.getElementById( 'pw' ).value ], 
+                   onLogin );
     } );
   </script>
 </body>
