updated license, readyme and changelog, and added warnings to DB::DataStore

--- a/ServerYote/html/test.html
+++ b/ServerYote/html/test.html
@@ -13,7 +13,7 @@
     yote.initMain();
 
     function onLogin( res ) {
-        alert( res );
+        alert( res.get('user') );
         console.log( [ 'woof', res ] );
     }
     
