updated license, readyme and changelog, and added warnings to DB::DataStore

--- a/YoteServer/html/test.html
+++ b/YoteServer/html/test.html
@@ -1,4 +1,4 @@
-<html>
+SS<html>
   <head>
 <title>oof</title>
     <script src="/__/js/yote.js"></script>
@@ -10,7 +10,7 @@
   <button id="login" type="button">Log In</button>
 
     <script>
-    yote.init('//127.0.0.1:8882');
+    yote.init();
 
     function onLogin( res ) {
         alert( "LoggedIn " + res );
