updated license, readyme and changelog, and added warnings to DB::DataStore

--- a/ServerYote/html/test.html
+++ b/ServerYote/html/test.html
@@ -20,7 +20,7 @@
     document.getElementById( 'login' ).addEventListener('click',function(){
         yote.call( 'login.js', 
                    [ document.getElementById( 'name' ).value, 
-                     document.getElementById( 'pw' ).value ], 
+                     document.getElementById( 'pw' ).value, ["HEEBY"] ], 
                    onLogin );
     } );
   </script>
