updated license, readyme and changelog, and added warnings to DB::DataStore

--- a/YoteServer/html/test.html
+++ b/YoteServer/html/test.html
@@ -13,7 +13,8 @@
     yote.initMain();
 
     function onLogin( res ) {
-        alert( "LoggedIn " + res );
+        alert( res );
+        console.log( [ 'woof', res ] );
     }
     
     document.getElementById( 'login' ).addEventListener('click',function(){
