updated license, readyme and changelog, and added warnings to DB::DataStore

--- a/YoteServer/html/test.html
+++ b/YoteServer/html/test.html
@@ -10,7 +10,7 @@
   <button id="login" type="button">Log In</button>
 
     <script>
-    yote.init();
+    yote.init('//127.0.0.1:8882');
 
     function onLogin( res ) {
         alert( "LoggedIn " + res );
