big change in parameter passing with this update. hashes and lists can be passed into yote without needing to be yote objects. conversely, a future update will change it so the reverse is also true

--- a/samp/html/index.html
+++ b/samp/html/index.html
@@ -251,7 +251,7 @@
                   }
                   $tab.append( buf );
                   $( '#no_products' ).hide();
-                  $( '#curr_products,#del_prod' ).show();
+                  $( '#curr_products,#del_prod,#prod_sel' ).show();
                   setup_picker( scenario,'product_lines',$('#prod_sel'), setup_product );
               } else {
                   $( '#no_products' ).show();
